--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "autoprefixer": "^10.3.1",
+    "postcss": "^8.3.5",
+    "postcss-nested": "^5.0.5",
+    "tailwindcss": "^2.2.4",
     "typescript": "4.3.5"
   }
 }
